--- a/source/stylesheets/main.scss
+++ b/source/stylesheets/main.scss
@@ -15,3 +15,23 @@ h6 {
     font-family: 'Montserrat', sans-serif;
     font-weight: 700;
 }
+
+/**********
+  SIDENAV
+**********/
+
+// Offset content for sidenav
+header,
+main,
+footer {
+    padding-left: 300px;
+}
+
+@media only screen and (max-width : 992px) {
+
+    header,
+    main,
+    footer {
+        padding-left: 0;
+    }
+}
