Index Page Refresh
Changed stuff on index page and crap

--- a/source/stylesheets/main.scss
+++ b/source/stylesheets/main.scss
@@ -20,18 +20,97 @@ h6 {
   SIDENAV
 **********/
 
-// Offset content for sidenavte
-header,
-main,
-footer {
-    padding-left: 300px;
+#sidenav {
+    height: 100vh;
+    margin: 0;
+    padding: 30px 30px 0px 30px;
+
+    .btn,
+    .btn-large {
+        color: #333;
+        background-color: #eaeaea;
+        width: 100%;
+        box-shadow: none;
+        border-radius: 10px;
+        font-weight: bold;
+        transition: none;
+
+        &:hover {
+            color: white;
+            background-color: #333;
+            transition: none;
+        }
+    }
+
+    .chips {
+        border: none;
+
+        .chip {
+            color: #333;
+            background-color: #eaeaea;
+
+            &.active {
+                color: white;
+                background-color: #333;
+            }
+        }
+    }
 }
 
-@media only screen and (max-width : 992px) {
+/**********
+  SPACERS
+**********/
 
-    header,
-    main,
-    footer {
-        padding-left: 0;
-    }
+.spacer-sm {
+    padding-top: 5vh;
+    padding-bottom: 5vh;
+}
+
+.spacer-sm.plus-sides {
+    padding-left: 5vh;
+    padding-right: 5vh;
+}
+
+.spacer-top-sm {
+    padding-top: 5vh;
+}
+
+.spacer-bottom-sm {
+    padding-bottom: 5vh;
+}
+
+.spacer-md {
+    padding-top: 10vh;
+    padding-bottom: 10vh;
+}
+
+.spacer-md.plus-sides {
+    padding-left: 10vh;
+    padding-right: 10vh;
+}
+
+.spacer-top-md {
+    padding-top: 10vh;
+}
+
+.spacer-bottom-md {
+    padding-bottom: 10vh;
+}
+
+.spacer-lg {
+    padding-top: 15vh;
+    padding-bottom: 15vh;
+}
+
+.spacer-lg.plus-sides {
+    padding-left: 15vh;
+    padding-right: 15vh;
+}
+
+.spacer-top-lg {
+    padding-top: 15vh;
+}
+
+.spacer-bottom-lg {
+    padding-bottom: 15vh;
 }
