--- a/source/stylesheets/main.scss
+++ b/source/stylesheets/main.scss
@@ -30,7 +30,7 @@ h6 {
         color: #333;
         background-color: #eaeaea;
         width: 100%;
-        box-shadow: none;
+        box-shadow: none !important;
         border-radius: 10px;
         font-weight: bold;
         transition: none;
