--- a/source/stylesheets/main.scss
+++ b/source/stylesheets/main.scss
@@ -1,11 +1,144 @@
+/************
+  CSS RESET
+************/
+
+html,
+body,
+div,
+span,
+applet,
+object,
+iframe,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+pre,
+a,
+abbr,
+acronym,
+address,
+big,
+cite,
+code,
+del,
+dfn,
+em,
+img,
+ins,
+kbd,
+q,
+s,
+samp,
+small,
+strike,
+strong,
+sub,
+sup,
+tt,
+var,
+b,
+u,
+i,
+center,
+dl,
+dt,
+dd,
+ol,
+ul,
+li,
+fieldset,
+form,
+label,
+legend,
+table,
+caption,
+tbody,
+tfoot,
+thead,
+tr,
+th,
+td,
+article,
+aside,
+canvas,
+details,
+embed,
+figure,
+figcaption,
+footer,
+header,
+hgroup,
+menu,
+nav,
+output,
+ruby,
+section,
+summary,
+time,
+mark,
+audio,
+video {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline;
+}
+
+/* HTML5 display-role reset for older browsers */
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+menu,
+nav,
+section {
+  display: block;
+}
+
+body {
+  line-height: 1;
+}
+
+ol,
+ul {
+  list-style: none;
+}
+
+blockquote,
+q {
+  quotes: none;
+}
+
+blockquote:before,
+blockquote:after,
+q:before,
+q:after {
+  content: '';
+  content: none;
+}
+
+table {
+  border-collapse: collapse;
+  border-spacing: 0;
+}
+
 /****************
   SHARED STYLES
 ****************/
 
 body {
   color: #444;
-  margin: 0;
-  padding: 0;
 }
 
 .label {
@@ -22,6 +155,7 @@ body {
 #sidenav {
   z-index: 99;
   position: fixed;
+  overflow: auto;
   top: 0;
   left: 0;
   width: 320px;
@@ -31,7 +165,11 @@ body {
   box-shadow: 10px 0px 30px -14px rgba(204, 204, 204, 1);
 
   form {
-    margin: 20px;
+    margin: 40px 20px 20px 20px;
+
+    h1 {
+      margin: 20px 0;
+    }
 
     #logo {
       color: #444;
@@ -72,6 +210,7 @@ body {
     }
 
     .button-large {
+      display: inline-block;
       color: #444;
       background-color: #eaeaea;
       border: none;
@@ -81,7 +220,9 @@ body {
       margin: 20px 0 20px 0;
       font-family: "Montserrat", sans-serif;
       font-weight: 700;
+      text-decoration: none;
       font-size: 0.85rem;
+      text-align: center;
       cursor: pointer;
 
       &:hover {
@@ -144,7 +285,7 @@ body {
             font-family: "Montserrat", sans-serif;
             font-weight: 700;
             font-size: 0.9rem;
-            margin: 20px 20px 0 20px;
+            margin: 20px 20px 5px 20px;
           }
 
           .song-artist {
@@ -167,7 +308,7 @@ body {
               width: 101px;
               color: #444;
               background-color: #eaeaea;
-              border-radius: 100px;
+              border-radius: 5px;
               padding: 5px 0;
               margin: 5px 0;
               font-family: "Montserrat", sans-serif;
